package resolucao_lista05;

public interface IPagavel {
    public double getValorAPagar();
    public String getDescricao();
}
